Bugfix: z-index on footer

--- a/src/app/components/Footer/footer.module.css
+++ b/src/app/components/Footer/footer.module.css
@@ -5,6 +5,7 @@
   grid-template-columns: 1fr 1fr 1fr;
   padding: 1.7rem 3rem;
   gap: 2rem;
+  z-index: 999;
 }
 
 .footer h2 {
